--- a/4.mss/tex/supps.tex
+++ b/4.mss/tex/supps.tex
@@ -12,7 +12,7 @@
 
     We make the several observations in addition to comments in the code. Firstly, identifiable interactions (beta\_ij in the code) are defined as a vector, which must then be matched to their correct position in the interaction matrix. This is the role of the icol and irow vectors defined in the data block. Our Github repository also contains the data\_prep.R file, which will show how to create these vectors from appropriate input data. 
     \textbf{Secondly, the code is written to use a negative binomial function (lines 96 and 98, and again 112 and 114) with an exponential inverse link (lines 64 and 77), the latter is equivalent to a log link function. These lines, along with the dispersion parameter (lines 31 and 86, and wherever the negative binomial function is used) must all be modified if a different family and link function are to be used.}
-    Thirdly, we impose the following constraints to improve convergence, avoid over-parameterisation and maintain identifiability of our parameters $r_i$ and $e_j$ \parencite{Huber2004, Kidzinski2020, Niku2021}. \textbf{We define both the effect and the response parameters as unit vectors, which means we only require T-1 degrees of freedom (where T is the total number of neighbour elements) to estimate all effect values and S-1 degrees of freedom (where S is the total number of focal elements) to estimate all response values}. This loss of a degree of freedom arises from the fact that the matrix whose $i,j$-elements are all products $r_i \times e_j$ is of rank 1. Though both latent variables $r_i$ and $e_j$ may be susceptible to sign switching when running the model on multiple chains, estimates for identifiable and unidentifiable interactions should not be affected.
+    Thirdly, we impose the following constraints to improve convergence, avoid over-parameterisation and maintain identifiability of our parameters $r_i$ and $e_j$ \parencite{Huber2004, Kidzinski2020, Niku2021}. \textbf{We define both the effect and the response parameters as unit vectors, which means we only require T-1 degrees of freedom (where T is the total number of neighbour elements) to estimate all effect values and S-1 degrees of freedom (where S is the total number of focal elements) to estimate all response values}. This loss of a degree of freedom arises from the fact that the matrix whose $i,j$-elements are all products $r_i \times e_j$ is of rank 1. Though both latent variables $r_i$ and $e_j$ may be susceptible to sign switching when running the model on multiple chains, estimates for identifiable and unidentifiable interactions should not be affected. \textbf{All $r_i$ and $e_j$'s are multiplied by a unique $weight$ parameter which controls the average strength of the resulting interactions.}
 
     \subsection{Assessing parameter identifiability}
     \label{SI:identify}
@@ -61,7 +61,7 @@
         We applied this framework to annual wildflower community dataset from Western Australia. This system is a diverse and well-studied community of annual plants which germinate, grow, set seed and die within approximately 4 months every year. Individual fecundity data were collected in 2016, when 100 50 x 50 cm plots established in the understory of West Perenjori Reserve (29$^o$28'01.3"S 116$^o$12'21.6"E) were monitored over the length of the full field season. The resulting dataset includes between 29 to over 1000 counts of individual plant seed production from 22 different focal species (with a median of 108 observations per species), in addition to the identity and densities of all neighbouring individuals within the interaction neighbourhood of each focal plant. Interaction neighbourhoods varied in radius from 3 to 5 cm depending on the size of the focal species \parencite{Martyn2020}. Total neighbourhood diversity was 71 wildflower species, 19 of which were recorded fewer than 10 times across the whole dataset. The species-specific effects of this latter group of species on focals were deemed negligible due to their extremely low density, they were thus grouped into an 'other' category and their effects on focals averaged. This resulted in 53 potential neighbour identities. \textbf{Plots were randomly positioned across the reserve to capture natural environmental variation in the system.  Major factors known to impact plant composition and within species abundances are soil P concentrations, shade the presence of woody debris \parencite{Dwyer2015}. Natural levels of soil P are very low in this system with elevated P concentrations occurring predominantly on the edge of the reserve near agricultural fields that use P fertiliser. All study plots were placed far from reserve edges to avoid artificially elevated levels of P, which are easy to detect due to an association between high P levels and extensive exotic grass abundances, which are largely absent from the core reserve where this study was conducted. Thus, environmental variation captured by this dataset reflects natural variation in tree cover, soil nutrients and woody debris. To account for confounding effects between plot location and plant density, half of all plots were thinned (a quarter to 60\% abundance and a quarter to 30\%). Thinning did not target any particular species.} 
 
         \paragraph{}
-    	In study systems which allow it, a proportion of interaction neighbourhoods can instead be thinned prior to the experiment to randomly remove neighbouring individuals and provide observations for low-density estimates of interactions. Though this steps is not strictly necessary, thinning certain neighbourhoods can also reduce potential confounding effects between the environment and interactions and thus provide more accurate estimates of interaction effects. Environmental data known to affect performance can also be recorded and included in the model (as a random effect for example) to minimise those confounding effects.
+    	In study systems which allow it, a proportion of interaction neighbourhoods can instead be thinned prior to the experiment to randomly remove neighbouring individuals and provide observations for low-density estimates of interactions. Though this steps is not strictly necessary, thinning certain neighbourhoods can also reduce potential confounding effects between the environment and interactions and thus provide more accurate estimates of interaction effects. \textbf{Environmental data known to affect performance can also be recorded and included in the model \parencite{Bimler2018, Matias2018} to minimise those confounding effects.}
 
         \paragraph{} 
         We required species demographic rates (seed survival and germination) in order to scale model interaction estimates into interaction strengths. Species demographic rates for 16 of our focal species were estimated from a database of field experiments carried out between 2016 and 2019 where seedbags were placed in the field to estimate germination rates, and ungerminated seeds were evaluated in the lab for survivability.  The remaining species were assigned mean demographic rates from these experiments. Further details on the methods used for collecting those seed rates are available in section \ref{SI:germination}.
@@ -123,7 +123,7 @@
         \label{alphaprime}
         \end{equation}
 
-        As we show here, the exact form of the rescaled interactions as well as intrinsic fitness can therefore vary depending on the specific population dynamic model applied and may include other demographic rates which reflect species-level differences in growth and mortality. \textit{In our case study, we were only able to scale interactions between pairs of focal species because we required demographic rates for both species involved in the interaction (Eq. \ref{alphaprime}) and rates for non-focal species were not available.} Because intrinsic fitness is estimated by the model framework and not directly observed, we used the mean of the $\gamma_{i}$ posterior distribution returned by our model in our scaling of the interaction coefficients.
+        As we show here, the exact form of the rescaled interactions as well as intrinsic fitness can therefore vary depending on the specific population dynamic model applied and may include other demographic rates which reflect species-level differences in growth and mortality. \textbf{In our case study, we were only able to scale interactions between pairs of focal species because we required demographic rates for both species involved in the interaction (Eq. \ref{alphaprime}) and rates for non-focal species were not available.} Because intrinsic fitness is estimated by the model framework and not directly observed, we used the mean of the $\gamma_{i}$ posterior distribution returned by our model in our scaling of the interaction coefficients.
 
 
         \subsubsection{Seed germination and survival data}
