--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -227,25 +227,24 @@ We developed a joint modelling framework to estimate pairwise interactions which
         We implement the NDDM (Eq.~\ref{nddm}), the RIM (Eq.~\ref{rim}), and the joint model as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to discriminate between identifiable and unidentifiable interactions. We provide a working example of the STAN code as well as R scripts and functions to run and fit the model on a simulated dataset in our GitHub repository \url{https://github.com/malbion/JointModelFramework}.
         From the model file, only \textbf{the family function}, the link function for $p_k$ and its parameterisation need to be modified in order to apply it to a differently-distributed dataset. Additionally, non-integer measures of performance (e.g.\ biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production, but a different distribution may be more appropriate when using other measures of performance.   
 
+        \paragraph{}
+        STAN returns parameters as distributions which maximise the likelihood, and are conditioned by the data and priors. Priors describe the distribution of plausible values which parameters may take. For an introduction to Bayesian inference which relates the use of priors to frequentist hypothesis testing, see \textcite{Ellison1996}. We recommend investigators experiment with setting different informed priors to both improve model convergence and verify the robustness of parameter estimates. The resulting parameters are termed posterior distributions, from which samples are drawn for analysis. Using parameter distributions rather than point estimates allows for easy inclusion of uncertainty, we therefore recommend sampling from each posterior interaction strength distribution to create multiple samples of the community interaction matrix. See \textcite{Ellison2004} for a comprehensive review of parameter estimations.
+
         % Dealing with convergence:
 		% X we show that multiple chains converge well on simulated data, for all variants of the model 
 		% - we explain that for our case study, convergence becomes difficult due to the correlation between the r and e parameters - which will depend on the data at hand.
 		% - we show that despite not-ideal rhat values, the posteriors of the RIM and Joint model gamma parameters still match closely to those of the NDDM, and the monte carlo standard error is still lower than the posterior standard deviation, so even though the chains don't converge they are still very close to one another, and often overlapping.
 		% - maybe we compare the parameter values between the multichain models and the single-chain models? I haven't done that yet though to not sure what it will show.
 
-
+    \subsection{Assessing model convergence}
         \paragraph{}
-        \textbf{We first evaluated convergence of the NDD model only, the RI model only, and the joint NDD-RI model using simulated data created with the \texttt{simul\_data()} function available in this project's associated GitHub repository, running the models with 4 chains and 3000 iterations, of which the first 2000 were discarded. We varied the total number of species and the proportion of unidentifiable interactions in our simlated datasets (the latter were assigned $0$ values in the NDDM). We observed good convergence of the $\gamma$ and $B$ parameters in all models as evaluated by the $\hat{R}$ statistic ($\hat{R} < 1.01$) and visual inspection of traceplots. As expected for the RI only model and the joint model, our latent variables $r$ and $e$ often showed sign-switching. This means that different MCMC chains return coefficient values which are of the same magnitude, but opposing signs. Whilst this affects the $\hat{R}$ statistic of these $r$ and $e$ parameters, it does not affect the convergence of the resulting interaction parameters, hence why we excluded $r$ and $e$ from our evaluation of convergence. Convergence was slightly more difficult to achieve with certain simulated datasets but this was solved by increasing the \texttt{adapt\_delta}  argument, hinting at potentially problematic geometry of the posteriors.}
-
-        \paragraph{}
-        \textbf{We then ran all models on the case study data with 4 chains and 7000 iterations, of which the first 5000 were discarded. All parameters for the NDDM converged well, however some of the $\gamma$ and $B$ parameters for the RIM and joint model received $\hat{R}$ values over $1.01$. High $\hat{R}$ values without other warnings are commonly associated with posteriors that are highly correlated and whose geometry is hence difficult to traverse \parencite{Team2022} [this reference is for \url{https://mc-stan.org/misc/warnings.html#r-hat}). We explain why this can be the case for the $r$ and $e$ parameters and how this affects the $\hat{R}$ of $\gamma$ and $B$ in the Supplementary Methods \ref{SI:convergence}, though the degree of correlation is dependent on the data at hand as evidenced by convergence of all models on the simulated data. Nevertheless we remained comfortable using the joint model estimates returned by multiple chains, Supplementary Methods \ref{SI:convergence} goes into further detail as to why and shows how the posterior intervals of these parameters remain informative despite high $\hat{R}$ values.}
-
+        \textbf{We first evaluated convergence of the NDD-only model, the RI-only model, and the joint NDD-RI model when fit to simulated data created with the \texttt{simul\_data()} function available in this project's associated GitHub repository. In these test fits, we ran the models with 4 chains and 3000 iterations, of which the first 2000 were discarded. We varied the total number of species and the proportion of unidentifiable interactions across our simulated datasets; when fitting the NDDM-only model, unidentifiable interactions were assigned a value $\beta_{i,j} = 0$. We observed good convergence of the $\gamma$ and $B$ parameters in all models as evaluated by the $\hat{R}$ statistic ($\hat{R} < 1.01$) and visual inspection of traceplots.
+        % DBS: Do we need to show evidence of this somewhere in the supps? If not, should we add (results not shown here) at the end of the previous sentence?
+        As expected for the RI-only model and the joint model, our latent variables $r$ and $e$ often showed sign switching. This means that different MCMC chains returned coefficient values which are of the same magnitude but with opposing signs. Whilst this affects the $\hat{R}$ statistic of these $r$ and $e$ parameters, it does not affect the convergence of the resulting interaction parameters (i.e.\ $r_i e_j$), hence why we excluded $r$ and $e$ from our evaluation of convergence. Convergence was slightly more difficult to achieve with certain simulated datasets but this was solved by increasing the \texttt{adapt\_delta} argument, hinting at potentially problematic geometry of the posteriors.}
+        % DBS: I don't know if the last sentence is detailed enough. Shouldn't we at least give a hint about what "certain simulated datasets" shared in common? I'm imagining something like "...certain simulated datasets (e.g., when X was big) but this..." Alternatively, we do into more detail below so I would consider just removing this last sentence and ending with the sentence that ends "...hence why we excluded...".
 
 
         %Bayesian models are often run on multiple MCMC chains. In our case, we deliberately run only one MCMC chain because the latent variables in our model ($r_i$ and $e_j$) are invariant to sign switching. This means that different MCMC chains can return coefficient values which are of the same magnitude, but opposing signs. As with the boral function in the boral R package \parencite{Hui2021} and the MCMCfactanal function in the MCMCpack package \parencite{Martin2011}, we run one chain only to simplify issues with checking chain convergence and computing parameter estimates which arise from sign-switching. Though many MCMC convergence diagnostics require multiple chains to be computed, single chain convergence can be assessed with the Geweke convergence statistic \parencite{Geweke1992}, for example with the geweke.diag() function from the coda package \parencite{Plummer2006}, as well as visually checking traceplots. \textbf{This being said, we also completed a model validation using multiple chains (S. Methods \ref{SI:multichains}). Outcomes from this validation did not result in different conclusions.}
-
-        \paragraph{}
-        STAN returns parameters as distributions which maximise the likelihood, and are conditioned by the data and priors. Priors describe the distribution of plausible values which parameters may take. For an introduction to Bayesian inference which relates the use of priors to frequentist hypothesis testing, see \textcite{Ellison1996}. We recommend investigators experiment with setting different informed priors to both improve model convergence and verify the robustness of parameter estimates. The resulting parameters are termed posterior distributions, from which samples are drawn for analysis. Using parameter distributions rather than point estimates allows for easy inclusion of uncertainty, we therefore recommend sampling from each posterior interaction strength distribution to create multiple samples of the community interaction matrix. See \textcite{Ellison2004} for a comprehensive review of parameter estimations.
 
     \subsection{Dealing with sparse networks}
     \label{meth:sparse}
@@ -258,6 +257,10 @@ We developed a joint modelling framework to estimate pairwise interactions which
 
        \paragraph{}
         We applied this framework to an annual wildflower community dataset from Western Australia collected in 2016. This dataset contains over 5000 observations of individual plant seed production from 22 different focal species, and the identity and density of all neighbouring individuals within a 3 to 5 cm radius of the focal individual. \textbf{The environmental heterogeneity of this system is well studied \parencite{Dwyer2015} and we thus know that at the local scales across which this system was surveyed, only soil phosphorous, shade and the presence of woody debris impact on diversity and abundance patterns. To account for this known environmental heterogeneity, we randomly thinned plots to decouple abundance and environment effects (refer to Supplementary Methods for further information).} We used our framework to quantify interactions between these 22 focal species and 52 neighbour species, and derived scaled interaction strengths with a well-supported population dynamics model for annual plants with a seed bank \parencite{Levine2009, Bimler2018} which required experimentally-measured species demographic rates. Viable seed production was used as the measure of performance and modelled with a negative binomial distribution and a log link. Further details on the data, the model fitting and the procedure for deriving scaled interactions from the population dynamics model are available in the Supplementary Methods \ref{SI:casestudy}.
+
+        \paragraph{}
+        \textbf{We fit all three models to the case study data with 4 chains and 7000 iterations, of which the first 5000 were discarded. All parameters for the NDDM-only model converged well; however, some of the $\gamma$ and $B$ parameters for the RIM-only and joint models received $\hat{R}$ values over $1.01$. High $\hat{R}$ values without other warnings are commonly associated with posteriors that are highly correlated and whose geometry is hence difficult to traverse \parencite{Team2022} [this reference is for \url{https://mc-stan.org/misc/warnings.html#r-hat}). The impact of such ``problematic geometries'' however, is dependent on the data at hand, as evidenced by reliable convergence of all models on the simulated data. We explain why this may be the case for the $r$ and $e$ parameters in our case study and how this affects the $\hat{R}$ of $\gamma$ and $B$ in the Supplementary Methods \ref{SI:convergence}. By comparing the fits across models and the resulting posterior distributions of model parameters, we remained comfortable using the joint model estimates returned by multiple chains to further study the interactions underlying the case study data. Supplementary Methods \ref{SI:convergence} goes into further detail in this regard and, in particular, shows how the posterior intervals of the model parameters remain informative despite high $\hat{R}$ values.}
+
 
 
 \section{Results}
