removing commented out paragraphs

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -238,13 +238,12 @@ We developed a joint modelling framework to estimate pairwise interactions which
 
     \subsection{Assessing model convergence}
         \paragraph{}
-        \textbf{We first evaluated convergence of the NDD-only model, the RI-only model, and the joint NDD-RI model when fit to simulated data created with the \texttt{simul\_data()} function available in this project's associated GitHub repository. In these test fits, we ran the models with 4 chains and 3000 iterations, of which the first 2000 were discarded. We varied the total number of species and the proportion of unidentifiable interactions across our simulated datasets; when fitting the NDDM-only model, unidentifiable interactions were assigned a value $\beta_{i,j} = 0$. We observed good convergence of the $\gamma$ and $B$ parameters in all models as evaluated by the $\hat{R}$ statistic ($\hat{R} < 1.01$) and visual inspection of traceplots.
-        % DBS: Do we need to show evidence of this somewhere in the supps? If not, should we add (results not shown here) at the end of the previous sentence?
+        \textbf{We first evaluated convergence of the NDD-only model, the RI-only model, and the joint NDD-RI model when fit to simulated data created with the \texttt{simul\_data()} function available in this project's associated GitHub repository. In these test fits, we ran the models with 4 chains and 3000 iterations, of which the first 2000 were discarded. We varied the total number of species and the proportion of unidentifiable interactions across our simulated datasets; when fitting the NDDM-only model, unidentifiable interactions were assigned a value $\beta_{i,j} = 0$. We observed good convergence of the $\gamma$ and $B$ parameters in all models as evaluated by the $\hat{R}$ statistic ($\hat{R} < 1.01$) and visual inspection of traceplots (results not shown here).
         As expected for the RI-only model and the joint model, our latent variables $r$ and $e$ often showed sign switching. This means that different MCMC chains returned coefficient values which are of the same magnitude but with opposing signs. Whilst this affects the $\hat{R}$ statistic of these $r$ and $e$ parameters, it does not affect the convergence of the resulting interaction parameters (i.e.\ $r_i e_j$), hence why we excluded $r$ and $e$ from our evaluation of convergence. Convergence was slightly more difficult to achieve with certain simulated datasets but this was solved by increasing the \texttt{adapt\_delta} argument, hinting at potentially problematic geometry of the posteriors.}
         % DBS: I don't know if the last sentence is detailed enough. Shouldn't we at least give a hint about what "certain simulated datasets" shared in common? I'm imagining something like "...certain simulated datasets (e.g., when X was big) but this..." Alternatively, we do into more detail below so I would consider just removing this last sentence and ending with the sentence that ends "...hence why we excluded...".
+        
+        % DBS: Do we need to show evidence of this somewhere in the supps? If not, should we add (results not shown here) at the end of the previous sentence?
 
-
-        %Bayesian models are often run on multiple MCMC chains. In our case, we deliberately run only one MCMC chain because the latent variables in our model ($r_i$ and $e_j$) are invariant to sign switching. This means that different MCMC chains can return coefficient values which are of the same magnitude, but opposing signs. As with the boral function in the boral R package \parencite{Hui2021} and the MCMCfactanal function in the MCMCpack package \parencite{Martin2011}, we run one chain only to simplify issues with checking chain convergence and computing parameter estimates which arise from sign-switching. Though many MCMC convergence diagnostics require multiple chains to be computed, single chain convergence can be assessed with the Geweke convergence statistic \parencite{Geweke1992}, for example with the geweke.diag() function from the coda package \parencite{Plummer2006}, as well as visually checking traceplots. \textbf{This being said, we also completed a model validation using multiple chains (S. Methods \ref{SI:multichains}). Outcomes from this validation did not result in different conclusions.}
 
     \subsection{Dealing with sparse networks}
     \label{meth:sparse}
@@ -289,8 +288,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
     Keystone species have disproportionately strong effects on other species in their system and the dynamics of the whole ecosystem, based on their abundances \parencite{Power1996, Piraino2002, Libralato2006}. As such their exclusion from a community is expected to create significant changes in species density and composition \parencite{Paine1969}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation (e.g.\ \cite{Paine1992}) \textbf{and the inclusion of multiple trophic levels}, we can identify potential candidates by comparing a species' impact on the population growth of other species to its own density \parencite{Libralato2006}. It is important to note that because our framework allows for asymmetrical interactions, we are able to differentiate a species' impact on other species from its response or sensitivity to neighbours \parencite{Broekman2020}. Figure \ref{fig:species}.B highlights a native species in green, \textit{Gilberta tenuifolia} (GITE), which may be a potential keystone species due to having strongly competitive effects on the rest of the community overall, despite low density. 
 
     \subsubsection*{Q3. Do all exotic species compete with native species?}
-    Though invasive species are expected to compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of exotic species facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017, Wainwright2019}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to the native species in a community. Figure \ref{fig:species}.C plots the sum of a species' competitive effects on neighbours against the sum of its facilitative effects on neighbours. Exotic species are identified in red. Out of these three exotic species, two have overall competitive effects on the community: \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). Both species have weak or close-to-median effects on their neighbours compared to other focal species. %\textit{P. aroides} interacts weakly with neighbours, whether it is competing or facilitative, and \textit{A. calendula} does compete but still lies below the median sum of competitive effects for the community, its overall competitive effect being largely driven by weak facilitation. 
-    \textit{Hypochaeris glabra} (HYPO) on the other hand has strong effects on other species, both competitive and facilitative, and has an overall facilitative contribution to the community. \textbf{These effects are partly driven by its incredibly high germination rate (over twice as high as any other focal species).}  These results suggest that here at least, the effects of exotic species on native species are complex and species-dependent.
+    Though invasive species are expected to compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of exotic species facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017, Wainwright2019}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to the native species in a community. Figure \ref{fig:species}.C plots the sum of a species' competitive effects on neighbours against the sum of its facilitative effects on neighbours. Exotic species are identified in red. Out of these three exotic species, two have overall competitive effects on the community: \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). Both species have weak or close-to-median effects on their neighbours compared to other focal species. \textit{Hypochaeris glabra} (HYPO) on the other hand has strong effects on other species, both competitive and facilitative, and has an overall facilitative contribution to the community. \textbf{These effects are partly driven by its incredibly high germination rate (over twice as high as any other focal species).}  These results suggest that here at least, the effects of exotic species on native species are complex and species-dependent.
 
 
 \section{Discussion}
@@ -305,11 +303,6 @@ We developed a joint modelling framework to estimate pairwise interactions which
     \paragraph{}
     \textbf{\textcite{Ovaskainen2017} present a similar approach to ours but for time-series data. Their method assumes that interspecific interactions can be described by a small number of community-level drivers (effectively linear combinations of species abundances) which best predict future growth rates. Though this method requires all intraspecific interactions to be directly inferrable, the number of community-level drivers is much smaller than the number of species, allowing interspecific interactions between many species to be quantified despite relatively short time-series data. They compared their framework to both sparse and full interaction models, the latter performing poorly due to overfitting. Indeed, whether our framework provides a better fit to data remains to be tested, and will depend strongly on the particulars of both the data and system at hand. Nonetheless, rather than treat sparse and full interaction models as an either-or question, our joint method provides an `intermediate' way to make use of data that has historically been insufficient or too incomplete to infer all pairwise interactions. We thus expect it will open up a wide range of questions that were previously difficult or impossible to answer.} Though we illustrate our study with one particular ecological dataset, the method presented here could be adapted for use on a wider variety of horizontal systems such as those found in microbial, neural, and social networks. 
 
-    %\paragraph{} % DELETE THIS PARAGRAPH
-    %Nonetheless, the amount of data required for estimating all interactions in diverse communities using our framework may still be substantial. Grouping species which appear very rarely is also a common strategy we employed in our case study to avoid over-parameterisation. If interactions with or between very rare species are the explicit object of a study, however, data-collection should focus on amassing observations of focal individuals from those rarer species to be able to estimate  interaction strengths.  
-
-    %By estimating the effects of species on each other's performance, and subsequently their population growth and patterns of density, our method stands in contrast to association networks and returns qualitatively different information. There are a wide range of association network frameworks used in ecology \parencite{Burns2010, Losapio2018, Montesinos-Navarro2018} and collectively, they are a common alternative to estimating interaction networks in high-diversity systems as they capture spatial associations between species (e.g.\ \cite{Saiz2018}) and require easier-to-obtain data. Association networks also benefit from easy implementation with a wide range of packages in R (e.g.\ \cite{Griffith2016}) though the resulting networks are typically symmetrical and cannot capture a species' effect on itself. Moreover, association networks remain poor predictors of species interactions and rarely match empirical estimates \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020
-
     \paragraph{}
     Species interaction networks have a wide range of practical applications, such as evaluating ecosystem response to human-altered landscapes, guiding future management decisions \parencite{Ross2011} or exploring how communities may respond to global warming \parencite{Gorman2019}. Conservation and ecosystem management efforts aimed at regulating species abundances can, for example, use the information provided by an interaction network to prioritise which species to conserve or eradicate based on their role in the community \parencite{Cirtwill2018a}. Identifying keystone, foundation and other important types of species roles is also helpful for understanding biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \parencite{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019} \textbf{though often requires the inclusion of other trophic levels}. The examples we describe here are not exhaustive, but serve to illustrate how horizontal interaction networks, \textbf{especially when linked to population models,} can help us understand both community dynamics overall and the effects \& response of specific species towards the community. 
 
@@ -318,15 +311,6 @@ We developed a joint modelling framework to estimate pairwise interactions which
 
     \paragraph{}
     Ultimately, quantifying species interaction networks allows us to apply tools from network theory to help us understand how these interactions drive community-level patterns of density and diversity. Several metrics already exist for describing horizontal network structure such as weighted connectance \parencite{Ulanowicz1991} or relative intransitivity \parencite{Laird2006a}, though these are fewer than for trophic or unweighted networks (e.g.\ \cite{Bersier2002, Delmas2019}). Adapting measures of nestedness or modularity for example to non-sparse networks (as horizontal communities typically are) would allow us to further characterise how interactions and species are organised. These metrics relate to various aspects of stability and could greatly inform us on how diversity is maintained. Likewise, networks also provide several ways of measuring and describing species roles in their communities \parencite{Cirtwill2018a} for example through the use of structural motifs, unique patterns of interacting species which together make up the whole network. Motifs have been found to have important biological meaning in food webs \parencite{Bascompte2005a} but remain to be identified for horizontal networks. 
-
-
-   %\subsection{Limitations}
-
-    % MOVED TO METHODS
-
-    %\paragraph{}
-    %Our framework assumes that though the total effect of one element on another increases with density, this relationship is linear. This may not always be the case however, as interactions may be invariant to density \parencite{} or scale non-linearly \parencite{}. Our framework also evaluates direct interactions only, and does not consider higher-order interactions \parencite{}. 
-
 
 \section*{Acknowledgements}
 
